--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div id="box">
         <ul class="img">
-            <li><a href="#"><img src="../img/img1.jpg" alt="照片1"></a></li>
-            <li><a href="#"><img src="../img/img2.jpg" alt="照片2"></a></li>
-            <li><a href="#"><img src="../img/img3.jpg" alt="照片3"></a></li>
-            <li><a href="#"><img src="../img/img4.jpg" alt="照片4"></a></li>
+            <li><a href="#"><img src="img/img1.jpg" alt="照片1"></a></li>
+            <li><a href="#"><img src="img/img2.jpg" alt="照片2"></a></li>
+            <li><a href="#"><img src="img/img3.jpg" alt="照片3"></a></li>
+            <li><a href="#"><img src="img/img4.jpg" alt="照片4"></a></li>
         </ul>
 
         <!--//这是底部导航圆点部分，根据图片的个数在js中自动添加-->
